fixed bug in navbar collapse

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ Steel City Comic */
 body {
   background-color: #F2EDE6;
   width:100%;
-  font-family:'Amazonas';
 }
 
 /* Background colors (from palette) */
